[tool.poetry]
name = "melaan"
version = "0.1.0"
description = "Control apartment gate via private server"
authors = ["Radon Rosborough <radon@intuitiveexplanations.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
cryptography = "^41.0.1"
gevent = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
